<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/mainBackground"
    tools:context="com.example.adamwhitakerwilson.dgtosc.GenerateActivity">

    <com.example.adamwhitakerwilson.dgtosc.GenerateView
        android:id="@+id/signature_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="360dp"
        android:layout_marginStart="0dp"
        tools:ignore="ContentDescription" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/mainBackground">

        <TextView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="39dp"
            android:text="@string/pause"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loopTypeRadioGroup" />

        <TextView
            android:id="@+id/loopType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/loopType"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071"
            app:layout_dodgeInsetEdges="top" />

        <ToggleButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/someColor2"
            android:checked="false"
            android:text="@string/pause"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pause"
            app:layout_constraintVertical_bias="0.052"
            app:layout_dodgeInsetEdges="top" />

        <RadioGroup
            android:id="@+id/loopTypeRadioGroup"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:dividerPadding="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loopType"
            app:layout_dodgeInsetEdges="top">

            <RadioButton
                android:id="@+id/backwardForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/backwardForward"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <RadioButton
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:text="@string/forward"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <RadioButton
                android:id="@+id/backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/backward"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

        </RadioGroup>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:fitsSystemWindows="false">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/mainBackground"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/outputs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/mainBackground"
                    android:checkedButton="@+id/out1"
                    android:clipToPadding="false"
                    android:gravity="center_vertical"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <RadioButton
                        android:id="@+id/out1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out1"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out2"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out3"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out4"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out5"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out6"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/out7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/out7"
                        android:textColor="@android:color/darker_gray" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/identitySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="@color/mainBackground"
                    android:checkedButton="@+id/id1"
                    android:clipToPadding="false"
                    android:gravity="center_vertical"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/outputs"
                    app:layout_constraintRight_toRightOf="parent">

                    <RadioButton
                        android:id="@+id/id1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id1"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id2"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id3"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id4"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id5"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id6"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id7"
                        android:textColor="@android:color/darker_gray" />

                    <RadioButton
                        android:id="@+id/id8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/id8"
                        android:textColor="@android:color/darker_gray" />
                </RadioGroup>
            </LinearLayout>
        </HorizontalScrollView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
