<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"

    tools:context="com.example.adamwhitakerwilson.dgtosc.MainActivity"
    tools:ignore="Overdraw"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTextIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="32dp"
        android:ems="8"
        android:hint="@string/ipHint"
        android:inputType="text|numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@color/someColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RelativeOverlap,RtlHardcoded" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:hint="@string/ipHint"
        android:text="@string/ip"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTextIpAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="32dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:hint="@string/ipHint"
        android:text="@string/Port"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="8"
        android:hint="@string/portHint"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@color/someColor"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editTextIpAddress"
        app:layout_constraintRight_toRightOf="@+id/editTextIpAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextIpAddress"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/connect"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:background="#8a4d3d1f"
        android:text="@string/connect"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintVertical_bias="0.371"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="@+id/connect"
        app:layout_constraintRight_toRightOf="@+id/connect"
        app:layout_constraintTop_toBottomOf="@+id/connect"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="116dp"
        android:layout_height="79dp"
        android:background="#8a4d3d1f"
        android:text="@string/next"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPort"
        app:layout_constraintRight_toRightOf="@+id/editTextPort"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:maxLines="40"
        android:scrollbars="vertical"
        android:text="@string/instructions"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/instructions" />

    <RadioGroup
        android:layout_width="93dp"
        android:layout_height="76dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/radioDraw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/connect"
        app:layout_constraintRight_toLeftOf="@+id/buttonNext"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.357"
        tools:layout_editor_absoluteX="675dp">

        <RadioButton
            android:id="@+id/radioGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generateOr"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="205dp" />

        <RadioButton
            android:id="@+id/radioDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drawOr"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="255dp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
